Updated project starter code to remove Triton.

--- a/project/starter/notebooks/01_baseline_analysis.ipynb
+++ b/project/starter/notebooks/01_baseline_analysis.ipynb
@@ -7,21 +7,33 @@
    "source": [
     "# UdaciMed | Notebook 1: Baseline Analysis\n",
     "\n",
-    "Welcome to UdaciMed! You are a **Machine Learning Engineer** tasked with optimizing our chest X-ray pneumonia detection model for production deployment.\n",
+    "Welcome to UdaciMed! You are a Machine Learning Engineer tasked with optimizing our chest X-ray pneumonia detection model for production deployment.\n",
     "\n",
-    "- **The challenge**: Our current model needs to be integrated into a multi-model diagnostic suite to be served to multiple tenants, but its high resource usage prevents efficient deployment on our shared T4 GPU infrastructure. This is the primary blocker to expanding our diagnostic services.\n",
+    "- **The challenge**: Before our new model can be approved for production, we must verify that it meets our strict performance SLAs. Deploying an unoptimized model could lead to high operational costs and poor performance across our diverse hardware fleet—from shared T4 GPU cloud instances to portable clinic devices.\n",
     "\n",
-    "- **Your mission**: Optimize the model to meet the requirements for our multi-tenant cloud deployment.\n",
+    "- **Your mission**: Optimize the model to pass _UdaciMed's Universal Performance Standard_, a strict production service level agreement (SLA) that must be met using the universally compatible ONNX format on our standardized target device.\n",
     "\n",
     "### **Optimization goals**\n",
     "\n",
-    "Your goal is to transform the baseline model to increase concurrent instances per model by meeting these production targets:\n",
+    "Your goal is to ensure the production model meets these production targets on our standardized development machine:\n",
     "\n",
-    "- **>80% FLOP reduction**: Floating Point Operations determine computational cost - reducing FLOPs directly improves throughput and energy efficiency for high-volume medical screening workflows.\n",
-    "- **< 100MB peak memory footprint**: Total GPU memory consumption (parameters + activations + workspace) during inference - the primary constraint for multi-tenant deployment where multiple model instances share GPU resources.\n",
-    "- **< 3ms latency**: This ensures a real-time user experience. We will measure both *amortized latency* (average time per sample in a large batch) and *true latency* (time for a single-image inference), as both are important for different use cases. This is critical for emergency medical scenarios where immediate pneumonia detection can be life-saving.\n",
-    "- **> 2000 samples/second throughput**: This target ensures the service is cost-effective and can handle high request volumes, which is essential for a scalable multi-tenant setup.\n",
+    "- **< 0.4 GFLOPs per sample**: Floating Point Operations determine computational cost - reducing FLOPs is the most critical step toward broad-platform efficiency.\n",
+    "- **< 100MB peak memory footprint**: Total memory consumption (parameters + activations + workspace) during inference - essential for running the model on memory-constrained edge devices and for enabling cost-effective multi-model environments in the cloud.\n",
+    "- **< 3ms latency**: This ensures a real-time user experience. We will measure both *amortized latency* (average time per sample in a large batch) and *true latency* (time for a single-image inference), as both are important for different use cases.\n",
+    "- **> 2000 samples/second throughput**: This specific target is for our high-performance hardware, like the reference T4 GPU. Meeting this goal proves the model is cost-effective and scalable for high-volume, server-side screening workflows.\n",
     "- **> 98% sensitivity***: This is a non-negotiable clinical safety requirement. We must ensure that a threshold percentage of all true pneumonia cases are correctly identified. All optimizations must be validated against this metric.\n",
+    "\n",
+    "#### **A note on our standardized target device**\n",
+    "\n",
+    "All performance targets in this project must be met on our official _\"standardized target device.\"_ This is an NVIDIA T4 GPU, a common and versatile datacenter GPU that represents a typical cloud deployment environment.\n",
+    "\n",
+    "By using a single, consistent hardware profile (NVIDIA T4 with 16GB VRAM, CUDA 12.4) for all our performance SLAs, we can:\n",
+    "\n",
+    "- *Ensure Reproducible Results*: Anyone on the team can validate performance and get consistent measurements.\n",
+    "\n",
+    "- *Create a Reliable Benchmark*: It provides a stable baseline to measure the impact of every optimization we make.\n",
+    "\n",
+    "If a model can meet our strict, universal performance standards on this reference hardware, we are confident it will perform well across our entire fleet of production devices.\n",
     "\n",
     "---\n",
     "\n",
@@ -381,7 +393,7 @@
    "source": [
     "> **Training insights: What does the training history tell us?**\n",
     "> \n",
-    "> The initial low validation accuracy is due to extreme overfitting due to the small dataset size in comparison to the model's parameter size. The presence of early plateaus and fast convergence also highlight that the architecture has high representational power - we can likely apply aggressive optimization without accuracy degratation."
+    "> The initial low validation accuracy is due to extreme overfitting due to the small dataset size in comparison to the model's parameter size. The presence of early plateaus and fast convergence also highlight that the architecture has high representational power - we can likely apply aggressive optimization without accuracy degradation."
    ]
   },
   {
@@ -553,7 +565,7 @@
     "\n",
     "print(\"\\nDiscussion questions:\")\n",
     "print(\"1. What happens when height != self.target_size? What is self.target_size set to?\") \n",
-    "print(\"2. How much computationa and memory overhead does F.interpolate add? (Hint: Compare 64x64 vs 224x224 pixel counts)\")\n",
+    "print(\"2. How much computational and memory overhead does F.interpolate add? (Hint: Compare 64x64 vs 224x224 pixel counts)\")\n",
     "print(\"3. Is this interpolation necessary for pneumonia detection, or just a legacy from ImageNet pretraining?\")"
    ]
   },
@@ -661,7 +673,7 @@
     "> 4. **Optimization priority**: Based on the profiling data, which optimization techniques would you prioritize:\n",
     ">    - Architecture modifications (channel reduction, efficient blocks)\n",
     ">    - Precision optimization (mixed precision, quantization)\n",
-    ">    - Hardware acceleration (TensorRT, specialized kernels)\n",
+    ">    - Hardware acceleration (TensorRT for GPU, ...)\n",
     ">   \n",
     ">    _IMPORTANT:_ Did you discover the major inefficiency we hinted at earlier? How much improvement could removing the 64→224 interpolation provide?"
    ]
@@ -700,7 +712,7 @@
     "\n",
     "Feel free to skip programmatic analysis of techniques which you deem to be non-applicable or less performant, but provide an explanation here or in the notebook's final markdown cell.\n",
     "\n",
-    "IMPORTANT: Don't forget to also analyze the potential of interpolation removal from the model's forward method!\n",
+    "**IMPORTANT:** Don't forget to also analyze the potential of interpolation removal from the model's forward method!\n",
     "\n",
     "#### Recommended strategic analysis approach\n",
     "\n",
@@ -727,10 +739,10 @@
     "    \n",
     "    Memory impact: Note that parameter memory is only ~13% of total memory in ResNet-18\n",
     "    FLOP improvements: Update the `in_ch × out_ch × kernel²` calculation for standard conv to account for `groups` division\n",
-    "    Speedup: Proportional to FLOP reduction, but may have overhead from grouped operations on GPU\n",
-    "    Throughput: Can be limited by memory bandwidth and GPU utilization patterns for grouped operations. \n",
+    "    Speedup: Proportional to FLOP reduction, but may have overhead from grouped operations on **parallel hardware**\n",
+    "    Throughput: Can be limited by memory bandwidth and **hardware utilization** patterns for grouped operations.\n",
     "    \n",
-    "    Also, note that, For CUDA and CUDNN, you must use torch.cuda.amp with channels_last to unlock throughput (but with some latency degraadation).\n",
+    "    Also, note that, some backends (like CUDA/CUDNN) may require specific memory formats (e.g., channels_last) and mixed precision to unlock maximum throughput for grouped convolutions.\n",
     "    This is a known issue: https://discuss.pytorch.org/t/performing-convolutions-in-groups-but-not-grouped-convolution/59412/27\n",
     "    \"\"\"\n",
     "    # Initialize analysis structure (feel free to skip any entries you don't want to programmatically calculate)\n",
@@ -752,7 +764,7 @@
     "    # HINT:\n",
     "    # 1. Find candidates: for name, module in model.named_modules() if isinstance(module, nn.Conv2d) and module.kernel_size[0] > 1 and module.groups == 1 and module.in_channels % groups == 0\n",
     "    # 2. Calculate per-layer: grouped_params = standard_params // groups, then param_reduction = (standard_params - grouped_params) / standard_params\n",
-    "    # 3. Aggregate impact: total_flops_saved += per_layer_savings, then realistic_speedup = 1 / (1 - flop_reduction_ratio * conv_coverage * gpu_efficiency_factor)\n",
+    "    # 3. Aggregate impact: total_flops_saved += per_layer_savings, then realistic_speedup = 1 / (1 - flop_reduction_ratio * conv_coverage * hardware_efficiency_factor)\n",
     "    \n",
     "    return analysis\n",
     "\n",
@@ -764,7 +776,7 @@
     "    \n",
     "    Memory impact: Note that parameter memory is only ~13% of total memory in ResNet-18\n",
     "    FLOP improvements: Update the `in_ch × out_ch × kernel²` calculation for standard conv to account for two layers now\n",
-    "    Speedup: Would be proportial to FLOP reduction, but actually heavily penalized (x0.6) due to overhead and memory patterns (small tensor operations don't utilize GPU parallelism effectively)\n",
+    "    Speedup: Proportional to FLOP reduction, but can be penalized (e.g., ~0.6x) due to memory-access overhead, as many small operations may not fully utilize hardware parallelism\n",
     "    Throughput: Directly scales with speedup estimates for batch processing scenarios\n",
     "    \"\"\"\n",
     "    # Initialize analysis structure (feel free to skip any entries you don't want to programmatically calculate)\n",
@@ -785,8 +797,7 @@
     "    # HINT: \n",
     "    # 1. Find candidates: for name, module in model.named_modules() if isinstance(module, nn.Conv2d) and module.kernel_size[0] > 1 and module.in_channels >= 16\n",
     "    # 2. Calculate per-layer: separable_params = (in_ch * k²) + (in_ch * out_ch), separable_flops = (feature_size * in_ch * k²) + (feature_size * in_ch * out_ch)\n",
-    "    # 3. Aggregate impact: avg_flop_reduction = total_flops_saved / total_candidate_flops, then apply GPU penalty: final_speedup = theoretical_speedup * 0.6\n",
-    "    \n",
+    "    # 3. Aggregate impact: avg_flop_reduction = total_flops_saved / total_candidate_flops, then apply hardware penalty: final_speedup = theoretical_speedup * 0.6    \n",
     "    return analysis\n",
     "\n",
     "def analyze_inverted_residuals_potential(model):\n",
@@ -1065,7 +1076,7 @@
     "> \n",
     "> 3. **Optimization priority**: In which order would you recommend implementing the 5 architectural techniques? Consider both impact and implementation difficulty.\n",
     "> \n",
-    "> 4. **Feasibility abssessment:**: Will the combined optimizations achieve the 10ms target? If not, what additional techniques might be needed?"
+    "> 4. **Feasibility assessment:**: Will the combined optimizations achieve the 3ms target? If not, what additional techniques might be needed?"
    ]
   },
   {
@@ -1075,9 +1086,9 @@
    "source": [
     "### Analysis checkpoint 2: Deployment optimization opportunities\n",
     "\n",
-    "**Task:** Analyze cloud deployment characteristics for multi-tenant T4 GPU infrastructure with focus on batch processing trade-offs and mixed precision acceleration.\n",
+    "**Task:** Analyze deployment characteristics for our reference hardware, with a focus on batch processing trade-offs and mixed precision acceleration.\n",
     "\n",
-    "_Feel free to also add considerations from the other hardware optimization techniques introduced in the course, including tensor core utilization and memory optimization patterns._"
+    "_Feel free to also add considerations from other hardware optimization techniques, such as leveraging specialized hardware acceleration units (e.g., Tensor Cores, NPUs) and other memory optimization patterns._"
    ]
   },
   {
@@ -1092,7 +1103,7 @@
     "    \"\"\"    \n",
     "    TODO: Analyze mixed precision (FP16) acceleration potential.\n",
     "    HINTS: These are the key analysis points to focus on:\n",
-    "    - Tensor core eligibility calculation based on operation types (Tensor cores accelerate matrix multiplies and convolutions)\n",
+    "    - Mixed precision suitability calculation based on operation types (hardware accelerators for FP16 typically target matrix multiplies and convolutions)\n",
     "    - Research-backed speedup estimates (1.8-2.5x for high coverage)\n",
     "    - Memory reduction modeling (FP32->FP16 = ~50% reduction)\n",
     "    - Throughput impact calculation (scales with speedup for batch processing scenarios)\n",
@@ -1100,8 +1111,8 @@
     "    # Initialize analysis structure (feel free to skip any entries you don't want to programmatically calculate)\n",
     "    analysis = {\n",
     "        'technique': 'Mixed Precision (FP16)',\n",
-    "        'tensor_core_eligible_ops': 0,\n",
-    "        'tensor_core_coverage_percent': 0,\n",
+    "        'mixed_precision_eligible_ops': 0,\n",
+    "        'mixed_precision_coverage_percent': 0,\n",
     "        'estimated_speedup': 1.0,\n",
     "        'estimated_memory_reduction_mb': 0,\n",
     "        'avg_flop_reduction_percent': 0,\n",
@@ -1112,8 +1123,8 @@
     "\n",
     "    # TODO: Complete the analysis dictionary with relevant values\n",
     "    # HINT: 3-step process\n",
-    "    # 1. Find tensor core eligible ops: tensor_core_ops = matrix_ops + conv_ops from detailed_results['operation_breakdown']\n",
-    "    # 2. Calculate coverage: coverage_percent = (tensor_core_ops / total_ops) * 100, then research-backed speedup = 1.8 + (coverage - 50) * 0.014 if coverage > 50%\n",
+    "    # 1. Find mixed precision eligible ops: eligible_ops = matrix_ops + conv_ops from detailed_results['operation_breakdown']\n",
+    "    # 2. Calculate coverage: coverage_percent = (eligible_ops / total_ops) * 100, then research-backed speedup = 1.8 + (coverage - 50) * 0.014 if coverage > 50%\n",
     "    # 3. Aggregate impact: memory_reduction = peak_memory_mb * 0.5 (FP32->FP16), throughput = baseline_throughput * estimated_speedup\n",
     "    \n",
     "    return analysis\n",
@@ -1150,7 +1161,7 @@
     "    )\n",
     "    \n",
     "    # TODO: Complete the analysis dictionary with relevant values\n",
-    "    # HINT: You can extract all informations from batch_results \n",
+    "    # HINT: You can extract all information from batch_results \n",
     "    # 1. Find optimal configs: real_time_optimal = min(batches, key=lambda k: latency_per_sample), throughput_optimal = max(batches, key=lambda k: samples_per_sec)\n",
     "    # 2. Create scenarios: Remember to apply mixed_precision_speedup to both latency (divide) and throughput (multiply) for deployment projections\n",
     "\n",
@@ -1200,7 +1211,7 @@
     "print(f\"\\nDEPLOYMENT OPTIMIZATION RESULTS:\")\n",
     "mp_details = deployment_analysis['mixed_precision']\n",
     "print(f\"\\n   Mixed Precision (FP16):\")\n",
-    "print(f\"     Tensor Core Eligible: {mp_details['tensor_core_coverage_percent']:.1f}%\")\n",
+    "print(f\"     Tensor Core Eligible: {mp_details['mixed_precision_coverage_percent']:.1f}%\")\n",
     "print(f\"     Estimated FLOP improvements: {mp_details['avg_flop_reduction_percent']:.1f}MB\")\n",
     "print(f\"     Estimated Speedup: {mp_details['estimated_speedup']:.1f}x\")\n",
     "print(f\"     Estimated Throughput improvements %: {mp_details['throughput_improvement_percent']:.1f}%\")\n",
@@ -1225,13 +1236,13 @@
     "> \n",
     "> Based on your deployment analysis results above, collect your thoughts about hardware deployment opportunities - this will help you in completing your optimization plan at the end of the notebook:\n",
     ">  \n",
-    "> 1. **Multi-tenancy constraints**: What is the main limiting factor for multi-tenant deployment - memory or compute? How many concurrent instances can the current model support?\n",
+    "> 1. **Shared-Resource Constraints**: What is the main limiting factor when deploying the model alongside other applications—memory or compute?\n",
     "> \n",
     "> 2. **Batch processing trade-offs**: How does performance change with batch size? What's the optimal configuration for different deployment scenarios?\n",
     "> \n",
     "> 3. **Mixed precision impact**: What percentage of operations can benefit from FP16? How much speedup can you realistically expect? What are the implementation risks?\n",
     "> \n",
-    "> 4. **Cloud readiness assessment**: Which KPI targets can be met with deployment optimizations alone? What are the remaining gaps that require architectural changes? What's your recommended deployment configuration?"
+    "> 4. **Production Readiness Assessment**: Which KPI targets can be met with hardware acceleration alone?"
    ]
   },
   {
@@ -1262,15 +1273,13 @@
     "_- Top 2 architectural techniques with highest impact potential_<br>\n",
     "_- Implementation difficulty vs expected benefit analysis_<br>\n",
     "_- Estimated parameter reduction and optimization goals projections_<br>\n",
-    "_- Other techniques you may consider beyond those listed]>>_\n",
-    "orization** is not applicable due to ResNet's small size layers.\n",
+    "_- Other techniques you may consider beyond those listed>>_\n",
     "\n",
     "4. **Hardware deployment optimization**: \n",
     "\n",
     "_<<TODO: Fill in your findings from Analysis Checkpoint 2 including:_<br>\n",
-    "_- Mixed precision acceleration potential and implementation plan]_<br>\n",
-    "_- Optimal batch configurations for different use cases]_<br>\n",
-    "_- Multi-tenant deployment opportunities - how many tenants?>>_\n",
+    "_- Mixed precision acceleration potential and implementation plan_<br>\n",
+    "_- Optimal batch configurations for different use cases_>>\n",
     "\n",
     "### **Recommended optimization roadmap**\n",
     "\n",
