--- a/project/starter/notebooks/02_architecture_optimization.ipynb
+++ b/project/starter/notebooks/02_architecture_optimization.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "From [Notebook 1](01_baseline_analysis.ipynb), we identified that our ResNet-18 baseline model faces **memory, computation, speed, and throughput challenges**:\n",
     "\n",
-    "- **Target FLOP reduction**: >80%\n",
+    "- **Target FLOP reduction**: >80% _(to achieve <0.4 GFLOPs per sample)_\n",
     "- **Target memory usage**: <100MB \n",
     "- **Target throughput**: >2,000 samples/sec \n",
     "- **Target latency**: <3ms\n",
@@ -48,24 +48,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pprint import pprint\n",
-    "import pickle\n",
-    "\n",
-    "name = 'parameter-sharing'\n",
-    "with open(f\"../results/optimization_results_{name}.pkl\", 'rb') as picklefile:\n",
-    "# with open(f\"../results/baseline_results.pkl\", 'rb') as picklefile:\n",
-    "    contents = pickle.load(picklefile)\n",
-    "\n",
-    "print(name.upper())\n",
-    "pprint(contents)"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -97,6 +79,7 @@
     "import torch.nn as nn\n",
     "import numpy as np\n",
     "import pickle\n",
+    "import os\n",
     "import random\n",
     "import copy\n",
     "import matplotlib.pyplot as plt\n",
@@ -734,7 +717,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Profile GPU memory usage of the optimized model\n",
+    "# Profile memory usage of the optimized model\n",
     "optimized_memory = profiler.profile_memory_usage(\n",
     "    model=optimized_model,\n",
     "    input_tensor=sample_images\n",
@@ -742,7 +725,7 @@
     "\n",
     "if 'error' not in optimized_memory:\n",
     "    print(f\"\\nMEMORY RESULTS:\")\n",
-    "    print(f\"   Peak GPU Memory: {optimized_memory['peak_memory_mb']:.1f} MB\")\n",
+    "    print(f\"   Peak Memory: {optimized_memory['peak_memory_mb']:.1f} MB\")\n",
     "    print(f\"   Memory Increase: {optimized_memory['memory_increase_mb']:.1f} MB\")\n",
     "    \n",
     "    if 'component_breakdown' in optimized_memory:\n",
